# travel-mate

./: README.md  config.py
backend/: .gitignore  README.md  pyproject.toml
backend/app/: exception.py  types_.py  utils.py
backend/app/tourismscraper/: ivory_coast.py
backend/tests/: conftest.py
backend/tests/app/: test_utils.py
backend/tests/app/tourismscraper/: test_ivory_coast.py
frontend/: README.md
